--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
-  "name": "tugasjs",
+  "name": "sanbercodejs",
   "version": "1.0.0",
-  "description": "",
+  "description": "JavaScript task for SanberCode QA BootCamp",
   "main": "soal1.js",
+  "dependencies": {
+    "ansi-regex": "^4.1.1",
+    "lodash": "^4.17.21",
+    "prompt-sync": "^4.2.0",
+    "strip-ansi": "^5.2.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ahmadrymera/SanberCodeJS.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "lodash": "^4.17.21",
-    "prompt-sync": "^4.2.0"
-  }
+  "bugs": {
+    "url": "https://github.com/ahmadrymera/SanberCodeJS/issues"
+  },
+  "homepage": "https://github.com/ahmadrymera/SanberCodeJS#readme"
 }
