--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "strip-ansi": "^5.2.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test1": "node soal1.js",
+    "test2": "node soal2.js"
   },
   "repository": {
     "type": "git",
